Some Papal changes

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1063,15 +1063,15 @@ ORI_absolute_monarchy;Kalahandi;;;;;;;;;;;;;x
 PAN_absolute_monarchy;Sikh Empire;;;;;;;;;;;;;x
 PAN_fascist_dictatorship;Khalistan;;;;;;;;;;;;;x
 PAN_prussian_constitutionalism;Sikh Empire;;;;;;;;;;;;;x
-PAP_absolute_monarchy;Roman Empire;;;;;;;;;;;;;x
+PAP_absolute_monarchy;Kingdom of Rome;;;;;;;;;;;;;x
 PAP_bourgeois_dictatorship;Republic of Rome;;;;;;;;;;;;;x
 PAP_democracy;Republic of Rome;;;;;;;;;;;;;x
+PAP_democracy2;Roman Republic;;;;;;;;;;;;;x
 PAP_fascist_dictatorship;State of Rome;;;;;;;;;;;;;x
 PAP_hms_government;Kingdom of Rome;;;;;;;;;;;;;x
 PAP_presidential_dictatorship;Republic of Rome;;;;;;;;;;;;;x
 PAP_proletarian_dictatorship;Peoples Republic of Rome;;;;;;;;;;;;;x
 PAP_prussian_constitutionalism;Kingdom of Rome;;;;;;;;;;;;;x
-PAP_theocracy;Papal States;;;;;;;;;;;;;x
 PBC_absolute_monarchy;Great Peru;;;;;;;;;;;;;x
 PBC_democracy;Andine Federation;;;;;;;;;;;;;x
 PBC_hms_government;Peru-Bolivia;;;;;;;;;;;;;x
