--- a/TGC/localisation/00_countries-parties.csv
+++ b/TGC/localisation/00_countries-parties.csv
@@ -3908,12 +3908,12 @@ PAN_fascist;The Fascist Faction;Faction fasciste;Die faschistische Fraktion;;;;;
 PAN_liberal;The Liberal Faction;Faction libérale;Die liberale Fraktion;;;;;;;;;;;x
 PAN_reactionary;The Nationalist Faction;Faction nationaliste;Die nationalistische Fraktion;;;;;;;;;;;x
 PAN_socialist;The Socialist Faction;Faction socialiste;Die sozialistische Fraktion;;;;;;;;;;;x
-PAP_anarcho_liberal;Republicani;Republicani;Republicani;;;;;;;;;;;x
+PAP_anarcho_liberal;Repubblicani Romani;Republicani;Republicani;;;;;;;;;;;x
 PAP_communist;Radical Sozialisti;Radical Sozialisti;Radical Sozialisti;;;;;;;;;;;x
-PAP_conservative;Moderati;Moderati;Moderati;;;;;;;;;;;x
-PAP_fascist;Fascist;Fasciste;Faschistisch;;;;;;;;;;;x
-PAP_liberal;Liberale;Liberale;Liberale;;;;;;;;;;;x
-PAP_reactionary;College of Cardinals;;;;;;;;;;;;;x
+PAP_conservative;Collegio Cardinalizio - Moderati;Moderati;Moderati;;;;;;;;;;;x
+PAP_fascist;Supremus Militaris Ordo Hospitalarius;Fasciste;Faschistisch;;;;;;;;;;;x
+PAP_liberal;Collegio Cardinalizio - Progressivi;Liberale;Liberale;;;;;;;;;;;x
+PAP_reactionary;Sanctum Collegium Cardinalium;;;;;;;;;;;;;x
 PAP_socialist;Sozialisti Christiano;Sozialisti Christiano;Sozialisti Christiano;;;;;;;;;;;x
 PAR_anarcho_liberal;Radicali;Radicali;Radicali;;;;;;;;;;;x
 PAR_communist;Comunisti;Comunisti;Comunisti;;;;;;;;;;;x
