--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -6535,3 +6535,5 @@ YOU_WON;§GYou Won;§GVous avez gagné;§GGewonnen;;;;;;;;;;;x
 YOUKICKED;You were kicked by the host for your evil deeds!;Votre mauvais comportement vous a valu de vous faire expulser par l'hôte !;;;;;;;;;;;;x
 ZOOM_IN;Zoom in;Zoom avant;;;;;;;;;;;;x
 ZOOM_OUT;Zoom out;Zoom arrière;;;;;;;;;;;;x
+election_tool_tip;Election Events will run normally.§b;;;;;;;;;;;;x
+election_tool_tip_muted;Election Events will be §Gmuted§!, but their results will be §Yrandom§!.§b;;;;;;;;;;;;x
