--- a/TGC/localisation/00_events_0090000.csv
+++ b/TGC/localisation/00_events_0090000.csv
@@ -1009,7 +1009,7 @@ EVTDESC97085;Argentinian forces have occupied more of the lands in the southern 
 EVTNAME97085;Conquest of the Desert;;;;;;;;;;;;;x
 EVTOPTA97085;For the glory of Argentina!;;;;;;;;;;;;;x
 EVTDESC97086;Through the judicious use of force, confiscation of native lands and the introduction of roads and other vestiges of civilization, conditions in $PROVINCENAME$ have greatly improved. The natives are proving to be contentious, but their numbers are far too few for us to worry about.;;;;;;;;;;;;;x
-EVTNAME97086;Pacification of $PROVINCENAME$;;;;;;;;;;;;;x
+EVTNAME97086;Pacification!;;;;;;;;;;;;;x
 EVTOPTA97086;Excellent!;;;;;;;;;;;;;x
 EVTDESC97087;While it may be the most dangerous and unexplored of all the regions of the inhabited world, our frontiersmen and pioneers are every day working to tame the wild land of the Amazon. Our claims are now substantiated by our settlers moving into the area. The other powers in the region must now recognize and accept our presence.;;;;;;;;;;;;;x
 EVTNAME97087;The Conquest of the Amazon;;;;;;;;;;;;;x
