--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -1,27 +1,30 @@
 #### ABA ####;
-ABA_absolute_monarchy;Tagelda n Ait Abbas;x;
-ABA_prussian_constitutionalism;Tagelda n Ait Abbas;x;
-ABA_hms_government;Tagelda n Ait Abbas;x;
-ABA_democracy;Tagduda n Ait Abbas;x;
-ABA_proletarian_dictatorship;Wegdud Tagduda n Ait Abbas;x;
-ABA_presidential_dictatorship;Tagduda n Ait Abbas;x;
-ABA_bourgeois_dictatorship;Tagduda n Ait Abbas;x;
-ABA_fascist_dictatorship;Tagduda n Ait Abbas;x;
-ABA_colonial_company;Tagelda n Ait Abbas;x;
-ABA_dominion;Tagelda n Ait Abbas;x;
-ABA_ADJ;Beni Abbas;x;
+ABA_absolute_monarchy;Tagelda n At 'Ebbas;x;
+ABA_prussian_constitutionalism;Tagelda n At 'Ebbas;x;
+ABA_hms_government;Tagelda n At 'Ebbas;x;
+ABA_democracy;Tagduda n Iqbayliyen;x;
+ABA_proletarian_dictatorship;Wegdud Tagduda n Iqbayliyen;x;
+ABA_presidential_dictatorship;Tagduda n Iqbayliyen;x;
+ABA_bourgeois_dictatorship;Tagduda n Iqbayliyen;x;
+ABA_fascist_dictatorship;Tamurt n Iqbayliyen;x;
+ABA_colonial_company;Tagelda n At 'Ebbas;x;
+ABA_dominion;Tagelda n At 'Ebbas;x;
+ABA_ADJ;n Leqbayel;x;
+ABA_absolute_monarchy_ADJ;n At 'Ebbas;x;
+ABA_prussian_constitutionalism_ADJ;n At 'Ebbas;x;
+ABA_hms_government_ADJ;n At 'Ebbas;x;
 ##### ABK #####;
 ABK_absolute_monarchy;Apkhazetis Samtavro;x;
 ABK_prussian_constitutionalism;Apkhazetis Samtavro;x;
 ABK_hms_government;Apkhazetis Samtavro;x;
-ABK_democracy;Apkhazetis Resp’ublik’a;x;
-ABK_proletarian_dictatorship;Sotsialist’uri Sabch’ota Resp’ublik’ Aapkhazetis;x;
-ABK_presidential_dictatorship;Apkhazetis Resp’ublik’a;x;
-ABK_bourgeois_dictatorship;Apkhazetis Resp’ublik’a;x;
-ABK_fascist_dictatorship;Apkhazetis Resp’ublik’a;x;
+ABK_democracy;Aphsny Ahwynthkharra;x;
+ABK_proletarian_dictatorship;Sotsialisttw Sovettw Respublika Aphsny;x;
+ABK_presidential_dictatorship;Aphsny Ahwynthkharra;x;
+ABK_bourgeois_dictatorship;Aphsny Ahwynthkharra;x;
+ABK_fascist_dictatorship;Aphsny Ahwynthkharra;x;
 ABK_colonial_company;Abkhazskoye Knyazhestvo;x;
 ABK_dominion;Abkhazskoye Knyazhestvo;x;
-ABK_ADJ;Apswaa;x;
+ABK_ADJ;Aphswaa;x;
 ##### ABU #####;
 ABU_absolute_monarchy;al-Iimarat al-Mutasalihat fi Sahil Eamman;x;
 ABU_prussian_constitutionalism;al-Iimarat al-Mutasalihat fi Sahil Eamman;x;
@@ -71,17 +74,17 @@ ADO_colonial_company;La Ciutat Lliure d’Andorra;x;
 ADO_dominion;La Ciutat Lliure d’Andorra;x;
 ADO_ADJ;Andorrà;x;
 #### ADV ####;
-ADV_absolute_monarchy;Königreich Neudeutschland;x;
-ADV_prussian_constitutionalism;Königreich Neudeutschland;x;
-ADV_hms_government;Königreich Neudeutschland;x;
-ADV_democracy;Republik Neudeutschland;x;
-ADV_proletarian_dictatorship;Volksrepublik Neudeutschland;x;
-ADV_presidential_dictatorship;Republik Neudeutschland;x;
-ADV_bourgeois_dictatorship;Republik Neudeutschland;x;
-ADV_fascist_dictatorship;Großer Neuer Deutscher Staat;x;
-ADV_colonial_company;Protektorat des Adelsvereins;x;
-ADV_dominion;Protektorat des Adelsvereins;x;
-ADV_ADJ;Neudeutsch;x;
+ADV_absolute_monarchy;Königreich Texas;x;
+ADV_prussian_constitutionalism;Königreich Texas;x;
+ADV_hms_government;Königreich Texas;x;
+ADV_democracy;Republik der Deutsch Texaner;x;
+ADV_proletarian_dictatorship;Volksrepublik Texas;x;
+ADV_presidential_dictatorship;Deutsch Texanische Republik;x;
+ADV_bourgeois_dictatorship;Deutsch Texanische Republik;x;
+ADV_fascist_dictatorship;Texanisches Reich;x;
+ADV_colonial_company;Mainzer Adelsverein;x;
+ADV_dominion;Imperiale Colonie Texas;x;
+ADV_ADJ;Texanisch;x;
 #### ADW ####;
 ADW_absolute_monarchy;Iimarat Adamawa;x;
 ADW_prussian_constitutionalism;Iimarat Adamawa;x;
@@ -102,7 +105,7 @@ AFG_democracy;Jomhuri-ye Afganestan;x;
 AFG_proletarian_dictatorship;Jomhuri-ye Afganestan;x;
 AFG_presidential_dictatorship;Jumhuri-yi Islami-yi Afganistan;x;
 AFG_bourgeois_dictatorship;Dawlat-i Islami-yi Afghanistan;x;
-AFG_fascist_dictatorship;D? Afganistan Islami Imarat;x;
+AFG_fascist_dictatorship;Da Afganistan Islami Imarat;x;
 AFG_colonial_company;Dawlat 'Afghanistan al'Iislamiat al-Aintiqalia;x;
 AFG_dominion;Dawlat 'Afghanistan al'Iislamiat al-Aintiqalia;x;
 AFG_ADJ;Afghan;x;
@@ -119,9 +122,9 @@ AGC_colonial_company;Imart Angoche;x;
 AGC_dominion;Imart Angoche;x;
 AGC_ADJ;Angoche;x;
 #### AIN ####;
-AIN_absolute_monarchy;Ainu Bakufu;x;
-AIN_prussian_constitutionalism;Ainu Bakufu;x;
-AIN_hms_government;Ainu Bakufu;x;
+AIN_absolute_monarchy;Ainu Mosir;x;
+AIN_prussian_constitutionalism;Ainu Mosir;x;
+AIN_hms_government;Ainu Mosir;x;
 AIN_democracy;Ainu Kyowakoku;x;
 AIN_proletarian_dictatorship;Ainu Shakai Shugi Kyowakoku;x;
 AIN_presidential_dictatorship;Ainu Kyowakoku;x;
@@ -131,17 +134,19 @@ AIN_colonial_company;Ainu Hogo-ryo;x;
 AIN_dominion;Ainu Hogo-ryo;x;
 AIN_ADJ;Aynu;x;
 ##### AKH #####;
-AKH_absolute_monarchy;Astrakhanskoye Khanstvo;x;
-AKH_prussian_constitutionalism;Astrakhanskoye Khanstvo;x;
+AKH_absolute_monarchy;Bökei Ordasy;x;
+AKH_prussian_constitutionalism;Bökei Ordasy;x;
 AKH_hms_government;Astrakhanskoye Khanstvo;x;
 AKH_democracy;Respublika Astrakhan';x;
 AKH_proletarian_dictatorship;Astrakhanskaya Kommunisticheskaya Respublika;x;
-AKH_presidential_dictatorship'Respublika Astrakhan';x;
+AKH_presidential_dictatorship;Respublika Astrakhan';x;
 AKH_bourgeois_dictatorship;Respublika Astrakhan';x;
 AKH_fascist_dictatorship;Gosudarstvo Ksatsitarksan;x;
 AKH_colonial_company;Astrakhanskoye Khanstvo;x;
 AKH_dominion;Astrakhanskoye Khanstvo;x;
 AKH_ADJ;Astrakhani;x;
+AKH_absolute_monarchy_ADJ;Bökei;x;
+AKH_prussian_constitutionalism_ADJ;Bökei;x;
 ##### ALB #####;
 ALB_absolute_monarchy;Mbretëria Shqiptare;x;
 ALB_prussian_constitutionalism;Mbretëria Shqiptare;x;
@@ -163,8 +168,8 @@ ALD_proletarian_dictatorship;al-Jumhuriat Aljazayiriat al-Iashtirakiat al-Shaebi
 ALD_presidential_dictatorship;al-Jumhuriyya Aljazairiyya ad-Dimuqratiyya aš-Šabiyya;x;
 ALD_bourgeois_dictatorship;al-Jumhuriyya Aljazairiyya ad-Dimuqratiyya aš-Šabiyya;x;
 ALD_fascist_dictatorship;Jumhuriat Aljazayir al-Hura;x;
-ALD_colonial_company;Mahmiat Aljazayir;x;
-ALD_dominion;Mahmiat Aljazayir;x;
+ALD_colonial_company;Algerie;x;
+ALD_dominion;Algerie;x;
 ALD_ADJ;Jazayiriun;x;
 ##### ALS #####;
 ALS_absolute_monarchy;Duché d'Alsace;x;
@@ -174,7 +179,7 @@ ALS_democracy;République d'Alsace;x;
 ALS_proletarian_dictatorship;L'Etat Communiste Alsacien;x;
 ALS_presidential_dictatorship;République d'Alsace;x;
 ALS_bourgeois_dictatorship;République d'Alsace;x;
-ALS_fascist_dictatorshipL'État Alsacien;;x;
+ALS_fascist_dictatorship;L'État Alsacien;;x;
 ALS_colonial_company;Territoire d'Alsace;x;
 ALS_dominion;Territoire d'Alsace;x;
 ALS_ADJ;Alsacien;x;
@@ -329,7 +334,7 @@ ARU_hms_government;al-Mamlakat al-Earabiat al-Mutahida;x;
 ARU_democracy;al-Jumhuriat al-Earabiat al-Mutahida;x;
 ARU_proletarian_dictatorship;al-Aitihad al-Aishtirakiu Lilearab;x;
 ARU_presidential_dictatorship;al-Jumhuriat al-Earabiat al-Mutahida;x;
-ARU_bourgeois_dictatorshipal-Jumhuriat al-Earabiat al-Mutahida;x;
+ARU_bourgeois_dictatorship;al-Jumhuriat al-Earabiat al-Mutahida;x;
 ARU_fascist_dictatorship;al-Dawlat al-Earabiat al-Iislamia;x;
 ARU_colonial_company;Iiqlim al-Earab;x;
 ARU_dominion;Iiqlim al-Earab;x;
@@ -700,7 +705,7 @@ BHP_ADJ;Bahaavalapuri;x;
 ##### BHR #####;
 BHR_absolute_monarchy;Mamlakat al-Bahrayn;x;
 BHR_prussian_constitutionalism;Mamlakat al-Bahrayn;x;
-BHR_hms_governmentMamlakat al-Bahrayn;;x;
+BHR_hms_government;Mamlakat al-Bahrayn;x;
 BHR_democracy;Jumhuriat al-Bahrayn;x;
 BHR_proletarian_dictatorship;Jumhuriat al-Bahrayn al-Iashtirakia;x;
 BHR_presidential_dictatorship;Jumhuriat al-Bahrayn;x;
@@ -1357,13 +1362,13 @@ CHI_absolute_monarchy;Zhonghuá Dìguó;x;
 CHI_prussian_constitutionalism;Zhonghuá Dìguó;x;
 CHI_hms_government;Zhonghuá Dìguó;x;
 CHI_democracy;Zhonghuá Mínguó;x;
-CHI_proletarian_dictatorship;Zhonghuá Gònghéguó Rénmín Gémìng Zhèngfu;x;
+CHI_proletarian_dictatorship;Zhonghuá Rénmín Gònghéguó;x;
 CHI_presidential_dictatorship;Zhonghuá Mínguó;x;
-CHI_bourgeois_dictatorship;Zhonghuá Liánbangguó;x;
+CHI_bourgeois_dictatorship;Zhonghuá Mínguó;x;
 CHI_fascist_dictatorship;Dà Zhonghuá Mínguó;x;
-CHI_colonial_company;Zhonghuá Baohù Guó;x;
-CHI_dominion;Zhonghuá Baohù Guó;x;
-CHI_ADJ;Zhonghuá Rén;x;
+CHI_colonial_company;Zhonghuá Línshí Zhèngfu;x;
+CHI_dominion;Zhonghuá Línshí Zhèngfu;x;
+CHI_ADJ;Zhonghuá De;x;
 ##### CHK #####;
 CHK_absolute_monarchy;Anachak Champasak;x;
 CHK_prussian_constitutionalism;Anachak Champasak;x;
@@ -1868,7 +1873,7 @@ DJA_absolute_monarchy;Kerajaan Jambi;x;
 DJA_prussian_constitutionalism;Kerajaan Jambi;x;
 DJA_hms_government;Kerajaan Jambi;x;
 DJA_democracy;Republik Jambi;x;
-DJA_proletarian_dictatorship;;Pekerja Republik Jambix;
+DJA_proletarian_dictatorship;Pekerja Republik Jambi;x;
 DJA_presidential_dictatorship;Republik Jambi;x;
 DJA_bourgeois_dictatorship;Republik Jambi;x;
 DJA_fascist_dictatorship;Negeri Jambi;x;
@@ -2305,7 +2310,7 @@ FRO_prussian_constitutionalism;Færøernes Fyrstedømme;x;
 FRO_hms_government;Færøernes Fyrstedømme;x;
 FRO_democracy;Færøernes Fristat;x;
 FRO_proletarian_dictatorship;Færøernes Kommunistiske Stat;x;
-FRO_presidential_dictatorshipFærøernes Fristat;;x;
+FRO_presidential_dictatorship;Færøernes Fristat;x;
 FRO_bourgeois_dictatorship;Færøernes Fristat;x;
 FRO_fascist_dictatorship;Færøernes Fristat;x;
 FRO_colonial_company;Protektoratet på Færøerne;x;
@@ -3251,7 +3256,7 @@ JOD_ADJ;Jodhapuri;x;
 ##### JOH #####;
 JOH_absolute_monarchy;Kesultanan Johor;x;
 JOH_prussian_constitutionalism;Kesultanan Johor;x;
-JOH_hms_governmentKesultanan Johor;;x;
+JOH_hms_government;Kesultanan Johor;x;
 JOH_democracy;Republik Johor;x;
 JOH_proletarian_dictatorship;Republik Rakyat Komunis Johor;x;
 JOH_presidential_dictatorship;The Johorean Republic;x;
@@ -3815,7 +3820,7 @@ LAT_dominion;Latvijas Protektorats;x;
 LAT_ADJ;Latvijas;x;
 ##### LAU #####;
 LAU_absolute_monarchy;Herzogtum Sachsen-Lauenburg;x;
-LAU_prussian_constitutionalismHerzogtum Sachsen-Lauenburg;;x;
+LAU_prussian_constitutionalism;Herzogtum Sachsen-Lauenburg;x;
 LAU_hms_government;Herzogtum Sachsen-Lauenburg;x;
 LAU_democracy;Republik Sachsen-Lauenburg;x;
 LAU_proletarian_dictatorship;Volksrepublik Lauenburg;x;
@@ -5466,7 +5471,7 @@ PRK_democracy;Republik Perak;x;
 PRK_proletarian_dictatorship;Republik Komunis Perak;x;
 PRK_presidential_dictatorship;Republik Perak;x;
 PRK_bourgeois_dictatorship;Republik Perak;x;
-PRK_fascist_dictatorshipNegeri Perak;;x;
+PRK_fascist_dictatorship;Negeri Perak;x;
 PRK_colonial_company;Protektorat Perak;x;
 PRK_dominion;Protektorat Perak;x;
 PRK_ADJ;Peraki;x;
@@ -5557,18 +5562,18 @@ QCI_dominion;Dominion of the Queen Charlotte Islands;x;
 QCI_ADJ;Queen Charlotte Islander;x;
 QCI_proletarian_dictatorship_ADJ;Xaaayda Gwaay;x;
 ##### QNG #####;
-QNG_absolute_empire;Qing Dìguó;x;
-QNG_absolute_monarchy;Qing Dìguó;x;
-QNG_prussian_constitutionalism;Qing Dìguó;x;
-QNG_hms_government;Qing Dìguó;x;
+QNG_absolute_empire;Dà Qingguó;x;
+QNG_absolute_monarchy;Dà Qingguó;x;
+QNG_prussian_constitutionalism;Dà Qingguó;x;
+QNG_hms_government;Dà Qingguó;x;
 QNG_democracy;Zhonghuá Mínguó;x;
 QNG_proletarian_dictatorship;Zhonghuá Mínguó;x;
 QNG_presidential_dictatorship;Zhonghuá Mínguó;x;
 QNG_bourgeois_dictatorship;Zhonghuá Mínguó;x;
 QNG_fascist_dictatorship;Zhonghuá Mínguó;x;
-QNG_colonial_company;Zhonghuá Baohù Guó;x;
-QNG_dominion;Zhonghuá Baohù Guó;x;
-QNG_ADJ;Zhonghuá Rén;x;
+QNG_colonial_company;Zhonghuá Línshí Zhèngfu;x;
+QNG_dominion;Zhonghuá Línshí Zhèngfu;x;
+QNG_ADJ;Zhonghuá De;x;
 QNG_absolute_monarchy_ADJ;Qing;x;
 QNG_prussian_constitutionalism_ADJ;Qing;x;
 QNG_hms_government_ADJ;Qing;x;
@@ -6589,7 +6594,7 @@ SUD_colonial_company;Mahmiat al-Sudan;x;
 SUD_dominion;Mahmiat al-Sudan;x;
 SUD_ADJ;Sudani;x;
 #### SUL ####;
-SUL_absolute_monarchy:Kasultanan sin Sug;x;
+SUL_absolute_monarchy;Kasultanan sin Sug;x;
 SUL_prussian_constitutionalism;Kasultanan sin Sug;x;
 SUL_hms_government;Kasultanan sin Sug;x;
 SUL_democracy;Republik Sulu;x;
@@ -7393,8 +7398,8 @@ UUW_dominion;Ussuwi Kingdom;x;
 UUW_ADJ;Ussuwi;x;
 #### UVT ####;
 UVT_absolute_monarchy;Kingdom of Vermont;x;
-UVT_prussian_constitutionalism;;Kingdom of Vermont;x;
-UVT_hms_government;;Kingdom of Vermont;x;
+UVT_prussian_constitutionalism;Kingdom of Vermont;x;
+UVT_hms_government;Kingdom of Vermont;x;
 UVT_democracy;Vermont Republic;x;
 UVT_proletarian_dictatorship;Vermont People's Republic;x;
 UVT_presidential_dictatorship;Vermont Republic;x;
