Some other small changes to the Endonymic submod

--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -26,17 +26,17 @@ ABK_colonial_company;Abkhazskoye Knyazhestvo;x;
 ABK_dominion;Abkhazskoye Knyazhestvo;x;
 ABK_ADJ;Aphswaa;x;
 ##### ABU #####;
-ABU_absolute_monarchy;al-Iimarat al-Mutasalihat fi Sahil Eamman;x;
-ABU_prussian_constitutionalism;al-Iimarat al-Mutasalihat fi Sahil Eamman;x;
-ABU_hms_government;al-Imarat al-Arabiyah al-Muttahidah;x;
+ABU_absolute_monarchy;Al-Imarat al-Mutasaliha;x;
+ABU_prussian_constitutionalism;Al-Imarat al-Mutasaliha;x;
+ABU_hms_government;Al-Imarat al-Mutasaliha;x;
 ABU_democracy;Jumhuriat al-Khalij al-Mutahida;x;
-ABU_proletarian_dictatorship;al-Aitihad al-Aishtiraki Lidual al-Khalij;x;
-ABU_presidential_dictatorship;al-Aitihad al-Earabiu Lidual al-Mutasalaha;x;
+ABU_proletarian_dictatorship;Al-Aitihad al-Aishtiraki Lidual al-Khalij;x;
+ABU_presidential_dictatorship;Al-Aitihad al-Earabiu Lidual al-Mutasalaha;x;
 ABU_bourgeois_dictatorship;Jumhuriat al-Khalij al-Mutahida;x;
 ABU_fascist_dictatorship;Dawlat al'Iimarat al-Earabiat al-Mutahida;x;
-ABU_colonial_company;al-Iimarat Almutasalihat fi Sahil Eamman;x;
-ABU_dominion;al-Iimarat Almutasalihat fi Sahil Eamman;x;
-ABU_ADJ;al-Iimaratiayn;x;
+ABU_colonial_company;Al-Iimarat Almutasalihat fi Sahil Eamman;x;
+ABU_dominion;Al-Iimarat Almutasalihat fi Sahil Eamman;x;
+ABU_ADJ;Al-Iimaratiayn;x;
 ##### ACA #####;
 ACA_absolute_monarchy;Royaume d'Acadie;x;
 ACA_prussian_constitutionalism;Royaume d'Acadie;x;
@@ -46,8 +46,8 @@ ACA_proletarian_dictatorship;Commune d'Acadie;x;
 ACA_presidential_dictatorship;Republique Acadienne;x;
 ACA_bourgeois_dictatorship;Republique Acadienne;x;
 ACA_fascist_dictatorship;État Acadien;x;
-ACA_colonial_company;Dominion d'Acadie;x;
-ACA_dominion;Dominion d'Acadie;x;
+ACA_colonial_company;Acadie;x;
+ACA_dominion;Acadie;x;
 ACA_ADJ;Acadien;x;
 #### ACE ####;
 ACE_absolute_monarchy;Reino do Acre;x;
