--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -18,12 +18,12 @@ ADV_hms_government;Königreich Texas;;;;;;;;;;;;;x
 ADV_presidential_dictatorship;Deutsch Texanische Republic;;;;;;;;;;;;;x
 ADV_proletarian_dictatorship;Volksrepublic Texas;;;;;;;;;;;;;x
 ADV_prussian_constitutionalism;Königreich Texas;;;;;;;;;;;;;x
-ADW_absolute_monarchy;Adamawa;;;;;;;;;;;;;x
+ADW_absolute_monarchy;Adamawa Emirate;;;;;;;;;;;;;x
 ADW_democracy;Adamawa Republic;;;;;;;;;;;;;x
 ADW_fascist_dictatorship;Adamawa Caliphate;;;;;;;;;;;;;x
-ADW_hms_government;Adamawa;;;;;;;;;;;;;x
+ADW_hms_government;Adamawa Emirate;;;;;;;;;;;;;x
 ADW_proletarian_dictatorship;Socialist Republic of Adamawa;;;;;;;;;;;;;x
-ADW_prussian_constitutionalism;Adamawa;;;;;;;;;;;;;x
+ADW_prussian_constitutionalism;Adamawa Emirate;;;;;;;;;;;;;x
 AFG_hms_government;Kingdom of Afghanistan;;;;;;;;;;;;;x
 AFG_prussian_constitutionalism;Kingdom of Afghanistan;;;;;;;;;;;;;x
 AFG_theocracy;Durrani Empire;;;;;;;;;;;;;x
