Revert "gui gone"
This reverts commit 9d9e27a96577da341e64dcc8c9149476ccf8daf5.

--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -2621,19 +2621,19 @@ GUA_fascist_dictatorship;Estado de Guatemala;x;
 GUA_colonial_company;Dominio de Guatemala;x;
 GUA_dominion;Dominio de Guatemala;x;
 GUA_ADJ;Guatemalteco;x;
-##### GZH #####;
-GZH_absolute_monarchy;Qián Guó;x;
-GZH_prussian_constitutionalism;Qián Guó;x;
-GZH_hms_government;Qián Guó;x;
-GZH_democracy;Qián Xì;x;
-GZH_proletarian_dictatorship;Guìzhou Suqu;x;
-GZH_presidential_dictatorship;Qián Xì;x;
-GZH_bourgeois_dictatorship;Qián Xì;x;
-GZH_fascist_dictatorship;Qián Xì;x;
-GZH_colonial_company;Guizhou;x;
-GZH_qng_colonial_company;Qián Guó;x;
-GZH_dominion;Guizhou;x;
-GZH_ADJ;Guizhou;x;
+##### GUI #####;
+GUI_absolute_monarchy;Qián Guó;x;
+GUI_prussian_constitutionalism;Qián Guó;x;
+GUI_hms_government;Qián Guó;x;
+GUI_democracy;Qián Xì;x;
+GUI_proletarian_dictatorship;Guìzhou Suqu;x;
+GUI_presidential_dictatorship;Qián Xì;x;
+GUI_bourgeois_dictatorship;Qián Xì;x;
+GUI_fascist_dictatorship;Qián Xì;x;
+GUI_colonial_company;Guizhou;x;
+GUI_qng_colonial_company;Qián Guó;x;
+GUI_dominion;Guizhou;x;
+GUI_ADJ;Guizhou;x;
 ##### GUY #####;
 GUY_absolute_monarchy;Dominion of Guyana;x;
 GUY_prussian_constitutionalism;Dominion of Guyana;x;
