--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -325,7 +325,7 @@ GRE_ADJ;Greek;Grec;Griechisch;;;;;;;;;;;x
 GRH_ADJ;Garhwali;;;;;;;;;;;;;x
 GRN_ADJ;Greenlander;;;;;;;;;;;;;x
 GUA_ADJ;Guatemalan;Guatémaltèque;Guatemalisch;;;;;;;;;;;x
-GZH_ADJ;Guizhou;;;;;;;;;;;;;x
+GUI_ADJ;Guizhou;;;;;;;;;;;;;x
 GUY_ADJ;Guyanese;;;;;;;;;;;;;x
 GWA_ADJ;Gwaliori;Gwaliori;Gwaliori;;;;;;;;;;;x
 GXI_ADJ;Guangxi;Kwangsi;Guangxi;;;;;;;;;;;x
