Ultra smol thing I forgor yesterday

--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -46,8 +46,8 @@ ACA_proletarian_dictatorship;Commune d'Acadie;x;
 ACA_presidential_dictatorship;Republique Acadienne;x;
 ACA_bourgeois_dictatorship;Republique Acadienne;x;
 ACA_fascist_dictatorship;État Acadien;x;
-ACA_colonial_company;Acadie;x;
-ACA_dominion;Acadie;x;
+ACA_colonial_company;Dominion d'Acadie;x;
+ACA_dominion;Dominion d'Acadie;x;
 ACA_ADJ;Acadien;x;
 #### ACE ####;
 ACE_absolute_monarchy;Reino do Acre;x;
@@ -86,9 +86,9 @@ ADV_colonial_company;Mainzer Adelsverein;x;
 ADV_dominion;Imperiale Colonie Texas;x;
 ADV_ADJ;Texanisch;x;
 #### ADW ####;
-ADW_absolute_monarchy;Iimarat Adamawa;x;
-ADW_prussian_constitutionalism;Iimarat Adamawa;x;
-ADW_hms_government;Iimarat Adamawa;x;
+ADW_absolute_monarchy;Lamorde Adamaawa;x;
+ADW_prussian_constitutionalism;Lamorde Adamaawa;x;
+ADW_hms_government;Lamorde Adamaawa;x;
 ADW_democracy;Jumhuriat Adamawa;x;
 ADW_proletarian_dictatorship;Jumhuriat Adamawa al-Iashtirakia;x;
 ADW_presidential_dictatorship;Jumhuriat Adamawa;x;
