Restore Neutrality cb

--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -317,6 +317,10 @@ restore_british_raj;Claim the British Raj;Réduire;Größe reduzieren;;;;;;;;;;;x
 restore_british_raj_desc;Puppet an enemy §Ynation§W that rightfully belongs within the §YBritish Raj§W;Obliger un autre §Ypays§W ?se désarmer et ?nous verser des compensations;Zwischen Sie ein anderes §YLand§W zur Abrüstung und zu Reparationszahlungen an uns.;;;;;;;;;;;x
 restore_british_raj_setup;$RECIPIENT$ becomes a puppet of $ACTOR$;$RECIPIENT$ devient satellite de $ACTOR$;$RECIPIENT$ wird eine Marionette von $ACTOR$;;;;;;;;;;;x
 restore_british_raj_short;$RECIPIENT$ becomes a puppet of $ACTOR$;$RECIPIENT$ devient satellite de $ACTOR$;$RECIPIENT$ wird eine Marionette von $ACTOR$;;;;;;;;;;;x
+restore_neutrality;Restore Neutrality;;;;;;;;;;;;;x
+restore_neutrality_desc;This nation violated antoher nation's neutrality and should face the consequences.;;;;;;;;;;;;;x
+restore_neutrality_setup;Restore neutrality.;;;;;;;;;;;;;x
+restore_neutrality_short;Restore neutrality.;;;;;;;;;;;;;x
 mexico_concession_rus;Californian Crisis;;;;;;;;;;;x
 mexico_concession_rus_desc;Secure territories of Alta California to Colorado river;;;;;;;;;;;x
 mexico_concession_rus_setup;Secure territories of Alta California to Colorado river;;;;;;;;;;;x
