--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -381,6 +381,7 @@ NORMAL_WAR_PUPPET_NAME_TUR_ROM;The $ORDER$Romanian War of Independence;;;;;;;;;;
 NORMAL_WAR_PUPPET_NAME_TUR_WAL;The$ORDER$Wallachian Revolution;;;;;;;;;;;;;x
 NORMAL_WAR_REMOVE_WMDS_NAME;$ORDER$War to Prevent $SECOND_COUNTRY$’s Crime Against Humanity;;;;;;;;;;;;;x
 NORMAL_WAR_RESTORE_AMERICA_NAME;The $ORDER$$FIRST$–$SECOND$ War of American Restoration;;;;;;;;;;;;;x
+NOMRLA_WAR_RESTORE_NEUTRALITY;$FIRST$ Expedition Against the Infamous $SECOND$;;;;;;;;;;;;;x
 NORMAL_WAR_RESTORE_ORDER_NAME;$ORDER$$FIRST$ Restoration of Order to the $SECOND$ provinces;$ORDER$$FIRST$ rétablissement de l'ordre dans les provinces de $SECOND$;$ORDER$$FIRST$ Wiederherstellung der Ordnung in den $SECOND$ Provinzen;;;;;;;;;;;x
 NORMAL_WAR_RESTORE_ORDER_NAME_ARG_ENT;The $ORDER$Platine War;;;;;;;;;;;;;x
 NORMAL_WAR_RESTORE_ORDER_NAME_AUS_HUN;$ORDER$The Hungarian Revolution;;;;;;;;;;;;;x
