Update 000000_A_TGC Endonymic Names.csv

--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -34,8 +34,8 @@ ABU_proletarian_dictatorship;Al-Aitihad al-Aishtiraki Lidual al-Khalij;x;
 ABU_presidential_dictatorship;Al-Aitihad al-Earabiu Lidual al-Mutasalaha;x;
 ABU_bourgeois_dictatorship;Jumhuriat al-Khalij al-Mutahida;x;
 ABU_fascist_dictatorship;Dawlat al'Iimarat al-Earabiat al-Mutahida;x;
-ABU_colonial_company;Al-Iimarat Almutasalihat fi Sahil Eamman;x;
-ABU_dominion;Al-Iimarat Almutasalihat fi Sahil Eamman;x;
+ABU_colonial_company;Trucial States;x;
+ABU_dominion;Trucial States;x;
 ABU_ADJ;Al-Iimaratiayn;x;
 ##### ACA #####;
 ACA_absolute_monarchy;Royaume d'Acadie;x;
@@ -89,23 +89,23 @@ ADV_ADJ;Texanisch;x;
 ADW_absolute_monarchy;Lamorde Adamaawa;x;
 ADW_prussian_constitutionalism;Lamorde Adamaawa;x;
 ADW_hms_government;Lamorde Adamaawa;x;
-ADW_democracy;Jumhuriat Adamawa;x;
-ADW_proletarian_dictatorship;Jumhuriat Adamawa al-Iashtirakia;x;
-ADW_presidential_dictatorship;Jumhuriat Adamawa;x;
-ADW_bourgeois_dictatorship;Jumhuriat Adamawa;x;
-ADW_fascist_dictatorship;Dawlat Adamawa al-Iislamia;x;
-ADW_colonial_company;Wilayat Adamawa;x;
-ADW_dominion;Wilayat Adamawa;x;
-ADW_ADJ;Adamawan;x;
+ADW_democracy;Hawtaandi Adamaawa;x;
+ADW_proletarian_dictatorship;Komin Adamaawa;x;
+ADW_presidential_dictatorship;Hawtaandi Adamaawa;x;
+ADW_bourgeois_dictatorship;Hawtaandi Adamaawa;x;
+ADW_fascist_dictatorship;Dawla Lislaamu Adamaawa;x;
+ADW_colonial_company;Adamawa;x;
+ADW_dominion;Adamawa;x;
+ADW_ADJ;Adamaawa;x;
 ##### AFG #####;
 AFG_absolute_monarchy;Amarat-i Afghanistan;x;
-AFG_prussian_constitutionalism;Padešahi-ye Afganistan;x;
-AFG_hms_government;Padešahi-ye Afganistan;x;
-AFG_democracy;Jomhuri-ye Afganestan;x;
-AFG_proletarian_dictatorship;Jomhuri-ye Afganestan;x;
-AFG_presidential_dictatorship;Jumhuri-yi Islami-yi Afganistan;x;
+AFG_prussian_constitutionalism;Padešahi-ye Afghanistan;x;
+AFG_hms_government;Padešahi-ye Afghanistan;x;
+AFG_democracy;Jomhuri-ye Afghanistan;x;
+AFG_proletarian_dictatorship;Jomhuri-ye Dimukrati-ye Afghanistan;x;
+AFG_presidential_dictatorship;Jomhuri-ye Islami-ye Afghanistan;x;
 AFG_bourgeois_dictatorship;Dawlat-i Islami-yi Afghanistan;x;
-AFG_fascist_dictatorship;Da Afganistan Islami Imarat;x;
+AFG_fascist_dictatorship;Imarat-i Islami-yi Afghanistan;x;
 AFG_colonial_company;Dawlat 'Afghanistan al'Iislamiat al-Aintiqalia;x;
 AFG_dominion;Dawlat 'Afghanistan al'Iislamiat al-Aintiqalia;x;
 AFG_ADJ;Afghan;x;
@@ -2356,18 +2356,6 @@ GAZ_fascist_dictatorship;Riphabliki Gaza;x;
 GAZ_colonial_company;Gaza Mimfumo;x;
 GAZ_dominion;Gaza Mimfumo;x;
 GAZ_ADJ;Gazan;x;
-##### GBL #####;
-GBL_absolute_monarchy;Flandern-Wallonien;x;
-GBL_prussian_constitutionalism;Flandern-Wallonien;x;
-GBL_hms_government;Flandern-Wallonien;x;
-GBL_democracy;Flandern-Wallonien;x;
-GBL_proletarian_dictatorship;Flandern-Wallonien;x;
-GBL_presidential_dictatorship;Flandern-Wallonien;x;
-GBL_bourgeois_dictatorship;Flandern-Wallonien;x;
-GBL_fascist_dictatorship;Flandern-Wallonien;x;
-GBL_colonial_company;Flandern-Wallonien;x;
-GBL_dominion;Flandern-Wallonien;x;
-GBL_ADJ;Belgisch;x;
 #### GBU ####;
 GBU_absolute_monarchy;Kaabu Empire;x;
 GBU_prussian_constitutionalism;Kaabu Empire;x;
