Update 000000_A_TGC Endonymic Names.csv

--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -106,18 +106,19 @@ AFG_proletarian_dictatorship;Jomhuri-ye Dimukrati-ye Afghanistan;x;
 AFG_presidential_dictatorship;Jomhuri-ye Islami-ye Afghanistan;x;
 AFG_bourgeois_dictatorship;Dawlat-i Islami-yi Afghanistan;x;
 AFG_fascist_dictatorship;Imarat-i Islami-yi Afghanistan;x;
+AFG_theocracy;Duranayanu Wakman-ye;x;
 AFG_colonial_company;Dawlat 'Afghanistan al'Iislamiat al-Aintiqalia;x;
 AFG_dominion;Dawlat 'Afghanistan al'Iislamiat al-Aintiqalia;x;
 AFG_ADJ;Afghan;x;
 #### AGC ####;
-AGC_absolute_monarchy;Angoche Saltanat;x;
-AGC_prussian_constitutionalism;Angoche Saltanat;x;
-AGC_hms_government;Angoche Saltanat;x;
-AGC_democracy;Jumhuriat Angoche;x;
-AGC_proletarian_dictatorship;Jumhuriat Angoche al-Aishtirakia;x;
-AGC_presidential_dictatorship;Jumhuriat Angoche;x;
-AGC_bourgeois_dictatorship;Jumhuriat Angoche;x;
-AGC_fascist_dictatorship;Jumhuriat Angoche;x;
+AGC_absolute_monarchy;Angoche Usultani;x;
+AGC_prussian_constitutionalism;Angoche Usultani;x;
+AGC_hms_government;Angoche Usultani;x;
+AGC_democracy;Angoche Jamhuri;x;
+AGC_proletarian_dictatorship;Angoche Jamhuri ya Watu;x;
+AGC_presidential_dictatorship;Angoche Jamhuri;x;
+AGC_bourgeois_dictatorship;Angoche Jamhuri;x;
+AGC_fascist_dictatorship;Angoche Nchi;x;
 AGC_colonial_company;Imart Angoche;x;
 AGC_dominion;Imart Angoche;x;
 AGC_ADJ;Angoche;x;
