Cabanagem ending added

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -919,3 +919,10 @@ EVTOPTA8150;Cheers!;;;;;;;;;;;;;x
 EVTNAME8151;The Cabanagem Spreads!;;;;;;;;;;;;;x
 EVTDESC8151;\nThe Cabanos have taken hold of yet another province in Grão-Para! \n\nTheir rebels are spreading like wild fire and wrecking havoc on our northern provinces!;;;;;;;;;;;;;x
 EVTOPTA8151;Damnit!;;;;;;;;;;;;;x
+EVTNAME8152;The Cabanagem was defeated!;;;;;;;;;;;;;x
+EVTDESC8152;\nThe Imperial Army has finally defeated the revolt in the north! \n\nUnrest is still high, but the rebels have been tamed and all our is rightfully under our control!;;;;;;;;;;;;;x
+EVTOPTA8152;They had it coming!;;;;;;;;;;;;;x
+EVTNAME8152;The Cabanagem was Prevailed!;;;;;;;;;;;;;x
+EVTDESC8152;\nThe Imperial Army failed to stop the revolution in the north! \n\nSadly we have to accept their secession, our army failed to secure the region, which is now far gone from our control.;;;;;;;;;;;;;x
+EVTOPTA8152;So be it. We don't need that useless jungle.;;;;;;;;;;;;;x
+EVTOPTB8152;We shall accept it, for now...;;;;;;;;;;;;;x
