Paraguai loc and renaming

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3486,3 +3486,7 @@ claim_provincia_cisplatina_title;Claim the Cisplatina Province;;;;;;;;;;;;;x
 claim_provincia_cisplatina_desc;Uruguay, once called Cisplatina, is rightfully land of ours. Now the rebels in the south have been defeated, we can press our claims further north.;;;;;;;;;;;;;x
 cisplatina_is_ours_title;Cisplatina is ours!;;;;;;;;;;;;;x
 cisplatina_is_ours_desc;We've secured our land back! Our south frontier is what it was once before.;;;;;;;;;;;;;x
+claim_paraguay_title;Take over Paraguay;;;;;;;;;;;;;x
+claim_paraguay_desc;Paraguay is defeat and under our complete control. This war is over. But perhaps this land can be of use for us, and besides, it's only natural to us to expand our influence into the Parana River frontier.;;;;;;;;;;;;;x
+paraguay_is_ours_title;Paraguay is ours!;;;;;;;;;;;;;x
+paraguay_is_ours_desc;Paraguay has been firmly under our control for a long time, and is rightfully a brazilian state now. Time to rename cities, streets, and make that people brasilians de-facto;;;;;;;;;;;;;x
