--- a/TGC/localisation/00_countries-parties.csv
+++ b/TGC/localisation/00_countries-parties.csv
@@ -4188,6 +4188,20 @@ QUE_reactionary_1;Parti l’Ultramontanisme;Parti nationaliste;Parti Nationalist;;
 QUE_socialist;Faction Socialiste;Parti ouvrier;Parti Ouvrier;;;;;;;;;;;x
 QUE_socialist_1;Parti Ouvrier;Parti ouvrier;Parti Ouvrier;;;;;;;;;;;x
 QUE_socialist_2;Action Libérale Nationale;Parti ouvrier;Parti Ouvrier;;;;;;;;;;;x
+RME_radical;Radicalis Factiosi;Republicani;Republicani;;;;;;;;;;;x
+RME_communist;Aequalitas Factiosi;Radical Sozialisti;Radical Sozialisti;;;;;;;;;;;x
+RME_conservative;Senatus Factionis;Moderati;Moderati;;;;;;;;;;;x
+RME_fascist;Imperial Cultus;Fasciste;Faschistisch;;;;;;;;;;;x
+RME_liberal;Factio Liberalis;Liberale;Liberale;;;;;;;;;;;x
+RME_reactionary;Factio Imperialis;;;;;;;;;;;;;x
+RME_socialist;Populi Factiosi;Sozialisti Christiano;Sozialisti Christiano;;;;;;;;;;;x
+ROR_radical;Repubblicani Romani - Fazione Radicale;Republicani;Republicani;;;;;;;;;;;x
+ROR_communist;Repubblicani Romani - Frazione Comunista;Radical Sozialisti;Radical Sozialisti;;;;;;;;;;;x
+ROR_conservative;Resistenza - Fazione Moderata;Moderati;Moderati;;;;;;;;;;;x
+ROR_fascist;Resistenza - Frazione Fascista;Fasciste;Faschistisch;;;;;;;;;;;x
+ROR_liberal;Repubblicani Romani - Fazione Moderata;Liberale;Liberale;;;;;;;;;;;x
+ROR_reactionary;Resistenza - Frazione Papale;;;;;;;;;;;;;x
+ROR_socialist;Repubblicani Romani - Frazione Socialista;Sozialisti Christiano;Sozialisti Christiano;;;;;;;;;;;x
 RGR_anarcho_liberal;Facción Radical;Partido Federalista;Partido Federalista;;;;;;;;;;;x
 RGR_anarcho_liberal_1;Convencionistas;Partido Federalista;Partido Federalista;;;;;;;;;;;x
 RGR_anarcho_liberal_2;Facción Radical;Partido Federalista;Partido Federalista;;;;;;;;;;;x
