--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -6537,3 +6537,4 @@ ZOOM_IN;Zoom in;Zoom avant;;;;;;;;;;;;x
 ZOOM_OUT;Zoom out;Zoom arrière;;;;;;;;;;;;x
 election_tool_tip;Election Events will run normally.§b;;;;;;;;;;;;x
 election_tool_tip_muted;Election Events will be §Gmuted§!, but their results will be §Yrandom§!.§b;;;;;;;;;;;;x
+override_tool_tip;§WARNING:§! National Campaigns will take a significant amount of money daily! Not using them corretly WILL bankrupt you!§b;;;;;;;;;;;;x
