--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -63,7 +63,8 @@ ABN_hms_government;Kingdom of Beni;;;;;;;;;;;;;x
 ABN_presidential_dictatorship;Benian Republic;;;;;;;;;;;;;x
 ABN_proletarian_dictatorship;Socialist Republic of Beni;;;;;;;;;;;;;x
 ABN_prussian_constitutionalism;Kingdom of Beni;;;;;;;;;;;;;x
-ABU_absolute_monarchy;Trucial States;;;;;;;;;;;;;x
+ABU_absolute_monarchy;Abu Dhabi;;;;;;;;;;;;;x
+ABU_absolute_monarchy2;Trucial States;;;;;;;;;;;;;x
 ABU_bourgeois_dictatorship;United Arab Councils;;;;;;;;;;;;;x
 ABU_fascist_dictatorship;Emirate;;;;;;;;;;;;;x
 ABU_proletarian_dictatorship;People’s Arabic Republic;;;;;;;;;;;;;x
