--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -9,7 +9,7 @@ AB4_ADJ;Tsebelda;;;;;;;;;;;;;x
 AB5_ADJ;Aibga;;;;;;;;;;;;;x
 ABN_ADJ;Benian;;;;;;;;;;;;;x
 ABU_ADJ;Abu Dhabi;;;;;;;;;;;;;x
-ABU_absolute_monarchy_ADJ;Trucial;;;;;;;;;;;;;x
+ABU_absolute_monarchy2_ADJ;Trucial;;;;;;;;;;;;;x
 ABU_bourgeois_dictatorship_ADJ;Arabic;;;;;;;;;;;;;x
 ABU_fascist_dictatorship_ADJ;Emirati;;;;;;;;;;;;;x
 ABU_proletarian_dictatorship_ADJ;Arabic;;;;;;;;;;;;;x
@@ -71,16 +71,79 @@ AUS_ADJ;Austrian;Autrichien;Österreichisch;;;;;;;;;;;x
 AWA_ADJ;Awadhi;Awadhi;Awadhi;;;;;;;;;;;x
 AWS_ADJ;Afar;Afar;Afar;;;;;;;;;;;x
 AZA_ADJ;Zande;Zande;Zande;;;;;;;;;;;x
-AZ0;Erivan;;;;;;;;;;;;;x
-AZ1;Karabakh;;;;;;;;;;;;;x
-AZ2;Quba;;;;;;;;;;;;;x
-AZ3;Sheki;;;;;;;;;;;;;x
-AZ4;Shirvan;;;;;;;;;;;;;x
-AZ5;Ganja;;;;;;;;;;;;;x
-AZ6;Gazakh;;;;;;;;;;;;;x
-AZ7;Nakhichevan;;;;;;;;;;;;;x
-AZ8;Shuragel;;;;;;;;;;;;;x
-AZ9;Borchaly;;;;;;;;;;;;;x
+AZ0_ADJ;Erivan;;;;;;;;;;;;;x
+AZ0_absolute_monarchy2_ADJ;Yerevan;;;;;;;;;;;;;x
+AZ0_democracy_ADJ;West Azeri;;;;;;;;;;;;;x
+AZ0_democracy2_ADJ;Yerevan;;;;;;;;;;;;;x
+AZ0_hms_government2_ADJ;Yerevan;;;;;;;;;;;;;x
+AZ0_proletarian_dictatorship_ADJ;Yerevan;;;;;;;;;;;;;x
+AZ0_prussian_constitutionalism2_ADJ;Yerevan;;;;;;;;;;;;;x
+AZ0_tur_colonial_company_ADJ;West Azeri;;;;;;;;;;;;;x
+AZ1_ADJ;Karabakh;;;;;;;;;;;;;x
+AZ1_absolute_monarchy2_ADJ;Artsakh;;;;;;;;;;;;;x
+AZ1_democracy2_ADJ;Artsakh;;;;;;;;;;;;;x
+AZ1_hms_government2_ADJ;Artsakh;;;;;;;;;;;;;x
+AZ1_prussian_constitutionalism2_ADJ;Artsakh;;;;;;;;;;;;;x
+AZ2_ADJ;Quba;;;;;;;;;;;;;x
+AZ2_absolute_monarchy2_ADJ;Armeno-Tat;;;;;;;;;;;;;x
+AZ2_democracy2_ADJ;Armeno-Tat;;;;;;;;;;;;;x
+AZ2_hms_government2_ADJ;Armeno-Tat;;;;;;;;;;;;;x
+AZ2_prussian_constitutionalism2_ADJ;Armeno-Tat;;;;;;;;;;;;;x
+AZ2_rus_colonial_company_ADJ;Kuba;;;;;;;;;;;;;x
+AZ2_rus_dominion_ADJ;Kuba;;;;;;;;;;;;;x
+AZ3_ADJ;Sheki;;;;;;;;;;;;;x
+AZ3_absolute_monarchy2_ADJ;Caucaso-Albanian;;;;;;;;;;;;;x
+AZ3_democracy2_ADJ;Caucaso-Albanian;;;;;;;;;;;;;x
+AZ3_hms_government2_ADJ;Caucaso-Albanian;;;;;;;;;;;;;x
+AZ3_prussian_constitutionalism2_ADJ;Caucaso-Albanian;;;;;;;;;;;;;x
+AZ4_ADJ;Shirvan;;;;;;;;;;;;;x
+AZ4_absolute_monarchy2_ADJ;Caucaso-Albanian;;;;;;;;;;;;;x
+AZ4_democracy2_ADJ;Caucaso-Albanian;;;;;;;;;;;;;x
+AZ4_hms_government2_ADJ;Caucaso-Albanian;;;;;;;;;;;;;x
+AZ4_prussian_constitutionalism2_ADJ;Caucaso-Albanian;;;;;;;;;;;;;x
+AZ5_ADJ;Ganja;;;;;;;;;;;;;x
+AZ5_absolute_monarchy2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ5_democracy2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ5_fascist_dictatorship_ADJ;Kura;;;;;;;;;;;;;x
+AZ5_federal_democracy_ADJ;Kura;;;;;;;;;;;;;x
+AZ5_hms_government2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ5_parliamentary_republic_ADJ;Kura;;;;;;;;;;;;;x
+AZ5_prussian_constitutionalism2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ5_rus_colonial_company_ADJ;Yelizaverpol;;;;;;;;;;;;;x
+AZ5_rus_dominion_ADJ;Yelizaverpol;;;;;;;;;;;;;x
+AZ6_ADJ;Gazakh;;;;;;;;;;;;;x
+AZ6_absolute_monarchy2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ6_democracy2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ6_hms_government2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ6_prussian_constitutionalism2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ7_ADJ;Nakhichevan;;;;;;;;;;;;;x
+AZ7_absolute_monarchy2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ7_democracy2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ7_fascist_dictatorship_ADJ;Arakh;;;;;;;;;;;;;x
+AZ7_federal_democracy_ADJ;Arakh;;;;;;;;;;;;;x
+AZ7_hms_government2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ7_parliamentary_republic_ADJ;Arakh;;;;;;;;;;;;;x
+AZ7_prussian_constitutionalism2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ8_ADJ;Shuragel;;;;;;;;;;;;;x
+AZ8_absolute_monarchy2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ8_democracy2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ8_fascist_dictatorship_ADJ;Alagï¿½z;;;;;;;;;;;;;x
+AZ8_federal_democracy_ADJ;Alagï¿½z;;;;;;;;;;;;;x
+AZ8_hms_government2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ8_parliamentary_republic_ADJ;Alagï¿½z;;;;;;;;;;;;;x
+AZ8_prussian_constitutionalism2_ADJ;Armenian;;;;;;;;;;;;;x
+AZ8_rus_colonial_company_ADJ;Alexandropol;;;;;;;;;;;;;x
+AZ8_rus_dominion_ADJ;Alexandropol;;;;;;;;;;;;;x
+AZ9_ADJ;Borchaly;;;;;;;;;;;;;x
+AZ9_absolute_monarchy2_ADJ;Debed;;;;;;;;;;;;;x
+AZ9_bourgeois_dictatorship_ADJ;Debed;;;;;;;;;;;;;x
+AZ9_democracy2_ADJ;Debed;;;;;;;;;;;;;x
+AZ9_fascist_dictatorship_ADJ;Debed;;;;;;;;;;;;;x
+AZ9_federal_democracy_ADJ;Debed;;;;;;;;;;;;;x
+AZ9_hms_government2_ADJ;Debed;;;;;;;;;;;;;x
+AZ9_parliamentary_republic_ADJ;Debed;;;;;;;;;;;;;x
+AZ9_presidential_dictatorship_ADJ;Debed;;;;;;;;;;;;;x
+AZ9_prussian_constitutionalism2_ADJ;Debed;;;;;;;;;;;;;x
 AZB_ADJ;Azerbaijani;Azerbaïdjanais;Aserbaidschanisch;;;;;;;;;;;x
 AZH_ADJ;Ruwallah;;;;;;;;;;;;;x
 BAB_ADJ;Babylonian;babylonien;Babylonisch;;;;;;;;;;;x
